[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UI/FoodSlot/FoodSlot.gd" type="Script" id=1]
[ext_resource path="res://Assets/Png/Slot.png" type="Texture" id=2]
[ext_resource path="res://Assets/Png/other/texture_progress.png" type="Texture" id=3]

[node name="FoodSlot" type="TextureButton"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CookProgress" type="TextureProgress" parent="."]
margin_top = 25.0
margin_right = 24.0
margin_bottom = 29.0
rect_min_size = Vector2( 24, 4 )
value = 50.0
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.145098, 0.878431, 0.329412, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CookTimer" type="Timer" parent="."]

[connection signal="pressed" from="." to="." method="_on_FoodSlot_pressed"]
[connection signal="timeout" from="CookTimer" to="." method="_on_CookTimer_timeout"]
